--- a/.Xrc
+++ b/.Xrc
@@ -1,5 +1,5 @@
 ! E8KM2Ocw:~/.Xrc by PipStuart <Pip@CPAN.Org> to start having some additional xterm && maybe urxvt or aterm settings on Aku. According to this 2014 site:
-! $VERSION='0.0';$d8VS='K27L7URx'; HTTPS://Wiki.ArchLinux.Org/index.php/x_resources .Xdefaults is deprec8d for .Xresources (or my .Xrc) wich requires xorg-xrdb
+! $VERSION='0.0';$d8VS='K2FL5crl'; HTTPS://Wiki.ArchLinux.Org/index.php/x_resources .Xdefaults is deprec8d for .Xresources (or my .Xrc) wich requires xorg-xrdb
 !   be installed 2run:`xrdb ~/.Xrc`; If I someday return to using `startx`, I will probably need to add2 my ~/.xinitrc "[[ -f ~/.Xrc ]] && xrdb -merge ~/.Xrc".
 !   See default settings for installed X11 apps in /usr/share/X11/app-defaults (if exists) && see curNtly loaded resources with `xrdb -query -all`. Just `xrc`.
 !   Comment must start bang !, not hash #. Maybe `xrdb -remove .Xrc` will rm these vals from server while -n -merge will Not merge but shows what would happen.
@@ -30,11 +30,13 @@
 !   x-terminal-emulator has no $VTE_VERSION but most of my terminalz now print it as '4205'. `m x-terminal-emulator` showed a 2008 man page for terminator but
 !   it looks like it has seen some active LaunchPad development since then. Ckot mlterm,roxterm,aterm-ml,mrxvt,rxvt-ml,yeahconsole,st[jt]erm,xfce4-terminal;
 ! G8RMHBpu:Installed mate-terminal, qterminal, && GNUstep terminal.app as well as vttest&&tmate 2also tSt AgNst alongside stterm && stjerm,&&instld lilyterm;
-*background:                    black
 *foreground:                    grey90
-! Many of these settings were originally gleaned from: HTTP://X.Org/archive/X11R6.8.1/doc/xterm.1.html but `man xterm` describes all available resources
+*background:                    black
+! Many of these settings were originally gleaned from: HTTP://X.Org/archive/X11R6.8.1/doc/xterm.1.html but `man xterm` describes all available resources;
 XTerm*Foreground:               green
 XTerm*Background:               black
+XTerm*Scrollbar.Foreground:     dark blue
+XTerm*Scrollbar.Background:     black
 XTerm*Border:                   dark blue
 XTerm*VT100.geometry:           160x50
 ! Honor the VT102 DECCOLM code to switch 80 to 132 columns (might need to be in class C132 also?):
@@ -43,6 +45,13 @@ XTerm*VT100.c132:               true
 XTerm*VT100.allowWindowOps:     true
 XTerm*VT100.allowFontOps:       true
 XTerm*VT100.allowTcapOps:       true
+! From man page, if you prefer using the left mouse button for dragging the scrollbar thumb, that can be set up by altering the transl8ions resource, e.g.,
+XTerm*VT100.Scrollbar.translations:  #override                                      \n\
+  <Btn5Down>:                   StartScroll( Forward    )                           \n\
+  <Btn1Down>:                   StartScroll(Continuous  ) MoveThumb() NotifyThumb() \n\
+  <Btn4Down>:                   StartScroll(Backward    )                           \n\
+  <Btn1Motion>:                                           MoveThumb() NotifyThumb() \n\
+  <BtnUp>:                     NotifyScroll(Proportional)               EndScroll()
 ! Specifies whether or not escape sequences to change colors assigned to different attributes are recognized (default might be false?):
 XTerm*dynamicColors:            true
 !XTerm*faceName:                 Terminus:style=Regular:size=8
@@ -51,7 +60,9 @@ XTerm*dynamicColors:            true
 !XTerm.VT100.UTF8Fonts.font:     font5
 !XTerm*faceSize:                 8
 ! Changing Size above does not seem to alter anything. Might want to try below l8r instead (with 8x16 instead of 7x13 that I had for a while before?):
-XTerm*faceName:                 x:fixed,Liberation Mono:size=8:antialias=true,Hack:size=8:antialias=true,Courier 10 Pitch:size=10:antialias=true
+! When I tried comma-sepR8ing Liber8ion,Hack,&&Courier below xt spewed: "too many fonts for fNorm, ignoring ..." so trying just Hack for now
+!XTerm*faceName:                 x:fixed,Liberation Mono:size=8:antialias=true,Hack:size=8:antialias=true,Courier 10 Pitch:size=10:antialias=true
+XTerm*faceName:                 x:fixed,Hack:size=8:antialias=true
 !XTerm*VT100.font:               8x16
 !      faceName (class FaceName) specifies pattern 4 scalable fonts selected from FreeType lib if support compiled in. No default val. multi fonts comma-sep.
 ! Prefix “x:” or “x11:” applies to XLFD font resource. "xft:" or missing prefix means TrueType. example: XTerm*faceName: x:fixed,xft:Bitstream Vera Sans Mono
@@ -1596,13 +1607,16 @@ ATerm*cursorColor:              white
 PTerm.TermWidth:                160
 PTerm.TermHeight:                   50
 !XTerm*VT100.geometry:          160x50
-!PTerm.Font
-!        This resource is the same as the -fn command-line option: it controls the font used to display normal text. The default is `fixed`.
+PTerm.Font:                     client:Hack 12
+!PTerm*Font:                     Hack:size=8:antialias=true
+!PTerm.Font            # tried: x:fixed,Hack:size=8:antialias=true but seems to have only got fixed, so trying to rmv "x:fixed," to just have Hack?
+!        This resource is the same as the -fn  command-line option: it controls the font used to display normal text. The default is `fixed`.
+PTerm.BoldFont:                 client:Hack Bold 12
 !PTerm.BoldFont
-!        This resource is the same as the -fb command-line option: it controls the font used to display bold text when BoldAsColour is set to 0  or  2.
+!        This resource is the same as the -fb  command-line option: it controls the font used to display bold text when BoldAsColour is set to 0  or  2.
 !        The default is unset (the font will be bolded by printing it twice at a one-pixel offset).
 !PTerm.WideFont
-!        This  resource  is the same as the -fw command-line option: it controls the font used to display double-width characters. The default is unset
+!        This resource is the same as the -fw  command-line option: it controls the font used to display double-width characters. The default is unset
 !        (double-width characters cannot be displayed).
 !PTerm.WideBoldFont
 !        This resource is the same as the -fwb command-line option: it controls the font used to display double-width characters in bold, when  BoldAs‐
@@ -1737,6 +1751,105 @@ URxvt.shading:                  96
 ! [-/+override-redirect] [-pty-fd fileno] [-/+hold] [-w number] [-b number]
 ! [-/+bl] [-lsp number] [-letsp number] [-/+sbg] [-mod modifier] [-/+ssc]
 ! [-/+ssr] [-pe string] [-e command arg ...]
+!urxvt -help 
+!Usage: urxvt [options] [-e command args]
+!where options include:
+!  -display string                 X server to contact
+!  -tn string                      value of the TERM environment variable
+!  -geometry geometry              size (in characters) and position
+!  -C                              intercept console messages
+!  -iconic                         start iconic
+!  -cd string                      start shell in this directory
+!  -dockapp                        start as dockapp
+!  -/+rv                           turn on/off reverse video
+!  -/+ls                           turn on/off login shell
+!  -mc number                      maximum time (in ms) between multi-click selections
+!  -/+j                            turn on/off jump scrolling
+!  -/+ss                           turn on/off skip scrolling
+!  -/+ptab                         turn on/off tab characters are pastable
+!  -/+sb                           turn on/off scrollbar
+!  -/+sr                           turn on/off scrollbar right
+!  -/+st                           turn on/off scrollbar without a trough
+!  -sbt number                     scrollbar thickness/width in pixels
+!  -/+si                           turn on/off scroll-on-tty-output inhibit
+!  -/+sk                           turn on/off scroll-on-keypress
+!  -/+sw                           turn on/off scroll-with-buffer
+!  -/+ip                           turn on/off inherit parent pixmap
+!  -/+tr                           turn on/off inherit parent pixmap
+!  -tint color                     tint color
+!  -sh number                      shade background by number %.
+!  -blr HxV                        gaussian blur radii to apply to the root background
+!  -fade number                    fade colors by number % when losing focus
+!  -fadecolor color                target color for off-focus fading
+!  -/+ut                           turn on/off utmp inhibit
+!  -/+vb                           turn on/off visual bell
+!  -/+tcw                          turn on/off triple click word selection
+!  -/+insecure                     turn on/off enable possibly insecure escape sequences
+!  -/+uc                           turn on/off underline cursor
+!  -/+bc                           turn on/off blinking cursor
+!  -/+pb                           turn on/off switch off pointer after delay
+!  -bg color                       background color
+!  -fg color                       foreground color
+!  -hc color                       highlight color
+!  -cr color                       cursor color
+!  -pr color                       pointer color
+!  -pr2 color                      pointer bg color
+!  -bd color                       border color
+!  -pixmap file[;geom]             background pixmap
+!  -icon file                      path to application icon image
+!  -fn fontname                    normal text font
+!  -fb fontname                    bold font
+!  -fi fontname                    italic font
+!  -fbi fontname                   bold italic font
+!  -/+is                           turn on/off font styles imply intensity changes
+!  -im name                        name of input method
+!  -pt style                       input style: style = OverTheSpot|OffTheSpot|Root
+!  -imlocale string                locale to use for input method
+!  -imfont fontname                fontset for styles OverTheSpot and OffTheSpot
+!  -name string                    client instance, icon, and title strings
+!  -title string                   title name for window
+!  -n string                       icon name for window
+!  -sl number                      number of scrolled lines to save
+!  -embed windowid                 window id to embed terminal in
+!  -depth number                   depth of visual to request
+!  -visual number                  visual id to request
+!  -/+override-redirect            turn on/off set override-redirect on the terminal window
+!  -pty-fd fileno                  file descriptor of pty to use
+!  -/+hold                         turn on/off retain window after shell exit
+!  -w number                       external border in pixels
+!  -b number                       internal border in pixels
+!  -/+bl                           turn on/off borderless window
+!  -lsp number                     number of extra pixels between rows
+!  -letsp number                   letter spacing adjustment
+!  -/+sbg                          turn on/off do not use internal glyphs
+!  -mod modifier                   meta modifier = alt|meta|hyper|super|mod1|...|mod5
+!  -/+ssc                          turn on/off enable secondary screen
+!  -/+ssr                          turn on/off enable secondary screen scroll
+!  -pe string                      colon-separated list of perl extensions to enable for this instance
+!  -e command arg ...              command to execute
+!  -/+background-border            respect the terminal border (-pe background)
+!  -background-expr string         background expression (-pe background)
+!  -background-interval seconds    minimum time between updates (-pe background)
+!  -bell-command string            the shell snippet to execute (-pe bell-command)
+!  -font-size-step interger        font size increase/decrease step (-pe font-size)
+!  -kuake-hotkey string            activation hotkey keysym (-pe kuake)
+!  -matcher-button string          the mouse button used to activate a match (-pe matcher)
+!  -matcher-launcher string        default launcher command (-pe matcher)
+!  -matcher-launcher-... string    custom launcher for pattern (-pe matcher)
+!  -matcher-pattern-... string     extra pattern to match (-pe matcher)
+!  -matcher-rend-... string        custom rendition for pattern (-pe matcher)
+!  -remote-clipboard-fetch string  the command used to fetch the selection (-pe remote-clipboard)
+!  -remote-clipboard-store string  the command used to store the selection (-pe remote-clipboard)
+!  -searchable-scrollback string   activation hotkey keysym (-pe searchable-scrollback)
+!  -selection-autotransform-... string autotransform expression (-pe selection-autotransform)
+!  -selection-pastebin-cmd string  the command to run create a new pastebin (-pe selection-pastebin)
+!  -selection-pastebin-url string  the url template for new pastebins (-pe selection-pastebin)
+!  -selection-pattern-0 string     first selection pattern (-pe selection)
+!  -tab-bg colour                  tab background colour (-pe tabbed)
+!  -tab-fg colour                  tab foreground colour (-pe tabbed)
+!  -tabbar-bg colour               tab bar background colour (-pe tabbed)
+!  -tabbar-fg colour               tab bar foreground colour (-pe tabbed)
+!  -url-launcher string            shell command to use (-pe selection-popup)
 !urxvt --help
 !Usage: urxvt [options] [-e command args] where resources (long-options) include:
 !  termName:                       string
@@ -1875,19 +1988,21 @@ URxvt.shading:                  96
 !  tabbar-fg:                      colour
 !  url-launcher:                   string
 
-! =lxterm is sh script ckng locale thN wrapping uxterm, but =lxterminal is a separ8 binary XeQtabl && uxterm does!sEm2 accept a geometry resource here (VT100)?
-!uxterm*VT100.geometry:          160x50
-!uxterm.textWidth:               160
-!uxterm.textHeight:                  50
+! =lxterm is sh script ckng locale thN wrapping uxterm, but =lxterminal is a separ8 binary XeQtabl && uxterm does!sEm2 accept a geometry resource here(VT100)?
+! tried UXTerm*VT100.geometry, UXTerm.textWidth, && UXTerm.termWidth (&& Height) && had "x:fixed," B4 Hack but got too many fonts for fNorm warning, so rmvd;
+UXTerm*faceName:                Hack:size=8:antialias=true
+!UXTerm*VT100.geometry:          160x50
+UXTerm.termWidth:               160
+UXTerm.termHeight:                  50
 
-xclock*Foreground:              black
-xclock*Background:              light grey
-xclock*Border:                  navy       blue
-xclock*Highlight:               cornflower blue
-xclock*Hands:                   slate      blue
-xclock*Mode:                    analog
-!xclock*analog:                  1
-xclock*update:                  1
+XClock*Foreground:              black
+XClock*Background:              light grey
+XClock*Border:	navy blue
+XClock*Highlight:               cornflower blue
+XClock*Hands:	slate blue
+XClock*Mode:                    analog
+!XClock*analog:                  1
+XClock*update:                  1
 ! Maybe these originally came from some fonts.conf but attempting`xrdb -remove .Xrc`to just pull xterm entries out again removed everything so this to restore:
 *customization:                 -color
 Xft.antialias:                  1
@@ -1895,3 +2010,12 @@ Xft.dpi:                        144
 Xft.hinting:                    1
 Xft.hintstyle:                  hintslight
 Xft.rgba:                       rgb
+Xcursor.size:	24
+Xcursor.theme:	DMZ-Black
+xclock*Background:	light grey
+xclock*Border:	navy blue
+xclock*Foreground:	black
+xclock*Hands:	slate blue
+xclock*Highlight:	cornflower blue
+xclock*Mode:	analog
+xclock*update:	1
