--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='K27LAppT'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K2ELEVEN'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -45,9 +45,9 @@ TERM hurd
 TERM jfbterm
 TERM konsole
 TERM kterm
-TERM linux
-TERM linux-c
-TERM mach-color
+TERM linux                                 # note that for GNUstep `/usr/bin/Terminal` from terminal.app pkg, it sets TERM to linux but should work with ...
+TERM linux-c                               #   ... vt100, vt220, xterm, or similar others but is distinguished by set TERM_PROGRAM='GNUstep_Terminal' && ...
+TERM mach-color                            #   ... `man Terminal` shows the page was last upd8d on:`d8 4CH` so is over 15-Years-Old as of 2dAy:`d8 K2E`;
 TERM mach-gnu-color
 TERM mlterm
 TERM putty
