--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='K2ELEVEN'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K2GLITCH'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:J88M8888 on d8:K2GLApBW. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:J88M8888 on d8:K2GLJGAu. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -480,6 +480,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .in                       01;38;5;008
 .in~                      01;38;5;001      # ~/dvl/g8/jack/xdp/ xdg-desktop-portal presumably .h.in backup file from previous ./configure run
 .cps                      01;38;5;008
+.rej                      01;38;5;008      # ~/dvl/c8/trm8/st/  REJected filz from attempted patching of source treez with .diff filz
 .rnd                      01;38;5;008
 .devfs                    01;38;5;008
 .mcoprc                   01;38;5;008
@@ -605,6 +606,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .kti                      01;38;5;014      # /etc/brltty/
 .ktb                      01;38;5;006      # /etc/brltty/
 .atb                      01;38;5;011      # /etc/brltty/
+.la                       01;38;5;013      # ~/dvl/m8/sudo/plugins/sudoers/ filz which are GNU Libtool Librariez
 .lss                      01;38;5;013      # Lynx Style Settings file like /etc/lynx.lss
 .logo                     01;38;5;013      # ASCII art file maybe containing ANSI escaped colors && figlet-gend text (eg,/etc/issue.logo w/"Gentoo")
 .login                    01;38;5;013
@@ -797,7 +799,9 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .atm                      01;38;5;002      # only /etc/hosts.atm cfg file?
 .dsp                      01;38;5;002
 .dsw                      01;38;5;002
+.exp                      01;38;5;002      # ~/dvl/m8/sudo/plugins/sudoers/ file which probably is not just for Expect (as Vim detected it to be)
 .aspx                     01;38;5;002
+.guess                    01;38;5;002      # ~/dvl/m8/sudo/config  file which attempts to guess a canonical system name
 .vcproj                   01;38;5;002
 .csproj                   01;38;5;002
 .ccaldb                   01;38;5;002
@@ -893,6 +897,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .cab                      01;38;5;009
 .ctb                      01;38;5;009      # brltty Country's character TaBle               for daemon driving refreshable console Braille display
 .cpio                     01;38;5;009
+.crate                    01;38;5;009      # ~/.cargo/registry/cache/github.com-*/ filz which contain managed packagez for the Rust language
 .crash                    01;38;5;009      # /var/crash/ files
 .upload                   01;38;5;092      # /var/crash/ files
 .uploaded                 01;38;5;002      # /var/crash/ files (possibly containing the IPv6 address to which a crash-log has finished uploading to?)
@@ -951,6 +956,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .swm                      01;38;5;009
 .wim                      01;38;5;009
 .deny                     01;38;5;009
+.LDAP                     01;38;5;009      # ~/dvl/m8/sudo/README  file which describes configuring && building functionality that's optional for sudo
 .SKIP                     01;38;5;009      # MANIFEST.SKIP from Perl packages
 .lock                     01;38;5;009
 .rxvt                     01;38;5;009      # /usr/share/terminfo/s/screen(-bce)?.rxvt
@@ -1047,6 +1053,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .xpdfimport               01;38;5;164      # /etc/apparmor.d files
 .pdf                      01;38;5;013      # AdObE           P0rtable DocUmNt 4m@
 .ps                       01;38;5;013      # AdObE           P0st Scrpt
+.pp                       01;38;5;092      # ~/dvl/m8/sudo/sudo    file which is probably rel8d to Providing Privileges, but might stand for Packages etc.
 .ppt                      01;38;5;164      # P0wRlS PtlS M$  PrEzNtAshN4m@ =(
 .pptx                     01;38;5;013
 .xls                      01;38;5;164
@@ -1061,6 +1068,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .qmail                    01;38;5;164
 .viminfo                  01;38;5;164      # ~/.viminfo && .zcompdump below were both originally dark red && mistakenly thought to be binaries
 .asoundrc                 01;38;5;164
+.configure                01;38;5;164      # ~/dvl/m8/sudo/INSTALL file which describes prepR8ion for make compiling source-code repositories
 .immodules                01;38;5;164
 .zcompdump                01;38;5;164
 .screen_exchange          01;38;5;164
